# Inference-Lens

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/clustering/: kmeans.yaml
configs/models/: deberta.yaml  logreg.yaml  xgboost.yaml
docs/: DSC478_Project_Proposal.docx
notebooks/01_eda/: 01_data_loading.ipynb  02_feature_extraction.ipynb  03_eda_visualization.ipynb
notebooks/02_clustering/: 01_kmeans.ipynb  02_advanced_clustering.ipynb  03_archetype_analysis.ipynb
notebooks/03_models/: 01_logreg_xgboost.ipynb  02_deberta_colab.ipynb  03_model_comparison.ipynb  04_stress_test.ipynb
reports/: archetype_summary.csv
scripts/: setup_mlflow.py
src/inference_lens/: __init__.py
src/inference_lens/app/: __init__.py  main.py
src/inference_lens/clustering/: __init__.py  cluster.py
src/inference_lens/data/: __init__.py  loader.py
src/inference_lens/features/: __init__.py  extractor.py
src/inference_lens/models/: __init__.py  train.py
src/inference_lens/stress_test/: __init__.py  evaluator.py
src/inference_lens/utils/: __init__.py  config.py  logging.py
